--- a/_lessons/testing.html
+++ b/_lessons/testing.html
@@ -33,6 +33,9 @@ Part of this viewpoint is our belief that our code should have quality
 assurance.  
   
 To do this we need to be able to:  
+- Run automated tests on our source data and on our transformed data to ensure 
+that SQL works as intended
+- Ensure our source data is up to date
 ""  
   
 [Teacher Notes:]  
