--- a/_lessons/testing.html
+++ b/_lessons/testing.html
@@ -35,7 +35,7 @@ assurance.
 To do this we need to be able to:  
 - Run automated tests on our source data and on our transformed data to ensure 
 that SQL works as intended
-- Ensure our source data is up to date
+- and ensure our source data is up to date  
 ""  
   
 [Teacher Notes:]  
