--- a/_lessons/testing.html
+++ b/_lessons/testing.html
@@ -39,8 +39,6 @@ that SQL works as intended
 ""  
   
 [Teacher Notes:]  
-Read out bullet points on the slide  
-
 ---
 # What are tests?
 
@@ -57,10 +55,14 @@ Behind the scenes, test are just `select` statements!
 So, what do we mean when we're talking about testing?  
 What we mean is that we want to ensure that when our assertions about our  
 data is true, our tests pass.  
+  
+We configure our tests using our .yml files, putting them within our models  
+directory.  
+  
+Under the hood, tests are just select statements!  
 ""  
   
 [Teacher Notes:]  
-Read the rest of the slide to give the broad overview of test implementation.  
 ---
 # Examples:
 .left-column[
@@ -79,9 +81,8 @@ models:
 
 ???
 ""  
-We set up tests using our .yml configuration files. Here's an example  
-of a test which ensures that our customer_id key in our customers model is  
-not null.  
+Here's an example  of a test we configured in one of our .yml files which  
+ensures that our customer_id key in our customers model is not null.  
 ""  
   
 [Teacher Notes:]  
