--- a/_lessons/testing.html
+++ b/_lessons/testing.html
@@ -287,7 +287,7 @@ models:
 ???
 ""  
 Accepted values, which tests that the distinct values in are within a specified  
-list.
+list.  
 ""  
   
 [Teacher Notes:]  
@@ -477,13 +477,16 @@ test and when we should test it?
 Here's our recommendations:  
 - at a minimum, the assumed primary key for not null and unique, for all models.  
 - if you're using a field for downstream joins or calculations, you might want
-to consider testing those before integrating them with other data.
+to consider testing those before integrating them with other data.  
+  
 ""  
 ---
 # Q: When should you run tests?
 
 ???  
-"When should we test?"
+""  
+What about when should we test?  
+""  
 --
 
 * Manual: When you first run a project
