--- a/_lessons/working-group-1.html
+++ b/_lessons/working-group-1.html
@@ -5,6 +5,7 @@ title: Working Group 1
 ---
 class: subtitle
 # Working session 1 - Setting up your training environment
+
 .dense-text[
 1. Make sure you have your dbt Cloud project set up.
     * Accept the dbt Cloud invite.
@@ -17,9 +18,10 @@ select * from raw.jaffle_shop.orders;
 ```
 3. Initialize your repository, make your first commit, and open a new branch called `dbt-learn`
 4. Make sure you can run `dbt run` and build the models in your project.
-5. Try testing your models with `dbt test`
-6. Try generating documentation with `dbt docs generate` and viewing the documentations
+5. Try testing your models with `dbt test` - figure out where these are configured
+6. Try generating documentation with `dbt docs generate` and viewing the documentations - figure out where documentation is written
 
+]
 ???
 Notes for what to walk students through
 * Give them a brief tour of the IDE: the file tree, file editor, the "Preview Data" and "Compile SQL" buttons, the results tab, and command line.
