Speaker Note Addition

--- a/_lessons/polish-project.html
+++ b/_lessons/polish-project.html
@@ -20,6 +20,11 @@ the do's and dont's of utilizing the functionality we've learned about so far.
 
 {% include options/focus_slide.html %}
 
+???
+""  
+Our focus of this session will be to develop our mental checklists in order to  
+continually keep our project clean and facilitate ease of onboarding.  
+""  
 ---
 
 class: subtitle
